--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "jquery": "^3.3.1",
     "jquery-ajax": "^2.1.4",
     "jsonp": "^0.2.1",
