--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "jsonp": "^0.2.1",
     "vue": "^2.5.2",
     "vue-lazyload": "^1.2.3",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-video-player": "^5.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
