--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "echarts": "^4.1.0",
+    "element-ui": "^2.4.3",
     "jquery": "^3.3.1",
     "jquery-ajax": "^2.1.4",
     "jsonp": "^0.2.1",
     "vue": "^2.5.2",
     "vue-lazyload": "^1.2.3",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vue-video-player": "^5.0.2"
   },
