--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "vue-lazyload": "^1.2.3",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
-    "vue-video-player": "^5.0.2"
+    "vue-video-player": "^5.0.2",
+    "vueshowpdf": "^1.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
